[package]
authors = ["himanoa <matsunoappy@gmail.com>"]
edition = "2018"
name = "mkrepo"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/himanoa/mkrepo"
repository = "https://github.com/himanoa/mkrepo"
keywords = ["cli", "ghq"]
categories = ["command-line-utilities"]
readme="README.md"
description = "Create repository directory for ghq style"
[[bin]]
name = "mkrepo"
path = "src/main.rs"
[dependencies]
clap = "2.33.0"
envy = "0.4.0"
failure = "0.1.5"
gitconfig = "0.1.0"
serde = "1.0.101"
serde_derive = "1.0.101"
toml = "0.5.3"
dirs = "2.0.2"
